# TCS-kanazawa-gw

./: README.md  lighthouserc.js  migration_task.md  pnpm-lock.yaml  vite.config.ts
.cursor/rules/: about-enviroment.mdc
.gemini/: styleguide.md
.kiro/specs/frontend-implementation/: design.md  react-nextjs-basics.md  requirements.md  tasks.md
.kiro/specs/project-structure-cleanup/: design.md  requirements.md  tasks.md
PlantMonitor/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
PlantMonitor/app/: main.py
PlantMonitor/app/services/: __init__.py  dynamodb.py  graph.py  s3.py
PlantMonitor/app/templates/: error.html  index.html
PlantMonitor/tests/: test_main_py_endpoint.py  test_s3_service.py
PlantMonitorPage/: .gitignore  tailwind.config.js
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: v1.py
backend/app/middleware/: __init__.py  logging.py
backend/app/services/: graph.py
backend/app/templates/: error.html  index.html
backend/data/: plant.json
backend/tests/: test_api.py  test_services.py
docs/: api.md  architecture.md  deployment.md
frontend/: .env.local.example  .gitignore  README.md  index.html  jest.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/__tests__/: layout.test.tsx  page.test.tsx
frontend/src/: App.tsx  vite-env.d.ts
scripts/: README.md  build.ps1  setup.ps1  setup.sh  start-dev.ps1  start-dev.sh  test.ps1  test.sh
(+74 files in other folders)
